--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
+    "@expo/webpack-config": "^18.1.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
+    "expo": "^48.0.19",
+    "expo-camera": "~13.2.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.0.0",
+    "react-native": "0.71.8",
+    "react-native-collapsible": "^1.6.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
